feat:video and image zoom

--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -8,8 +8,8 @@
   .nav {
     background-color: black;
     color: white;
-    position: relative;
-    width: 100%; /* Ancho completo del navbar */
+    position:static;
+    width: 100%; 
     height: 50px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
   }
