--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -9,14 +9,14 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 99%;
     background-color: rgba(0, 0, 0, 0.5); /* Fondo negro semitransparente */
   }
   
-  .banner-img {
+  .banner-video {
     width: 100%;
-    height: 500px;
-    z-index: -1; /* Coloca la imagen detrás del texto */
+    height: 500px; /* O el alto deseado para el video */
+    object-fit: cover; /* Para que el video se ajuste al contenedor */
   }
   
   .banner-text {
@@ -25,7 +25,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    font-size: 2rem;
+    font-size: 90px;
     text-align: center;
     z-index: 1; 
     
