--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Ojuju:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 body {
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300px;
-    font-style: normal;
-    background-image: linear-gradient(108deg, #220049 27%, #0d00ff 90%);
-  }
+  font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300px;
+  font-style: normal;
+  background-image: linear-gradient(108deg, #220049 27%, #0d00ff 90%);
+  margin: 0; /* Agrega esto para asegurarte de que no haya ningún margen predeterminado */
+  padding: 0; /* Agrega esto para asegurarte de que no haya ningún relleno predeterminado */
+  overflow-x: hidden; /* Esto ocultará cualquier desplazamiento horizontal */
+}
+
+.container {
+  max-width: 100%; /* Establece el ancho máximo para que se adapte al ancho del viewport */
+  margin: 0 auto; /* Esto centrará tu contenido */
+  padding: 0 20px; /* Agrega algo de relleno opcional para evitar que el contenido toque los bordes */
+}
