--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -1,33 +1,32 @@
 /* Banner.css */
 .banner-container {
-    position: relative;
-    width: 100%;
-  }
-  
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 99%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fondo negro semitransparente */
-  }
-  
-  .banner-video {
-    width: 100%;
-    height: 500px; /* O el alto deseado para el video */
-    object-fit: cover; /* Para que el video se ajuste al contenedor */
-  }
-  
-  .banner-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 90px;
-    text-align: center;
-    z-index: 1; 
-    
-  }
-  
+  position: relative; /* Asegura que los elementos hijos estén posicionados relativamente */
+}
+
+.overlay {
+  position: absolute; /* Posiciona el fondo negro sobre el video */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo negro semitransparente */
+}
+
+.banner-video {
+  width: 100%;
+  height: auto; /* Ajusta automáticamente la altura según el ancho del contenedor */
+  object-fit: cover; /* Para que el video se ajuste al contenedor */
+}
+
+.banner-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-size: 90px;
+  text-align: center;
+  z-index: 1; 
+}
+
+/* Agrega estilos específicos para el Navbar si es necesario */
