--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,36 +1,27 @@
-/* Reset de margen y padding por defecto */
-* {
-    margin: 0;
-    padding: 0;
-  }
-  
-  /* Estilos para el navbar */
-  .nav {
-    background-color: black;
-    color: white;
-    position:static;
-    width: 100%; 
-    height: 50px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-  }
-  
-  .nav-items {
-    display: flex;
-    justify-content: flex-end; 
-    height: 100%;
-    padding-right: 20px; 
-  }
-  
-  .nav-items a {
-    color: white;
-    text-decoration: none;
-    margin: 0 10px; /* Espacio entre los elementos */
-    line-height: 50px; /* Centra verticalmente el texto */
-    transition: background-color 0.3s ease;
-  }
-  
+.nav {
+  background-color: black; /* Fondo transparente */
+  color: white;
+  position: relative; /* Cambiar según sea necesario */
+  z-index: 1001; /* Asegura que esté por encima del Banner */
+  width: 100%; /* Ancho completo */
+  height: 50px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: space-between; /* Alinea los elementos horizontalmente */
+  align-items: center; /* Centra verticalmente los elementos */
+  padding: 10px 20px; /* Espaciado interior */
+}
 
-  .nav-items a:hover {
-    background-color: rgba(122, 122, 122, 0.521);
-    width:auto; /* Cambia el color de fondo al pasar el ratón */
-  }  
+.nav-items {
+  display: flex;
+  list-style-type: none; /* Quita los puntos de lista */
+}
+
+.nav-items a {
+  color: white;
+  text-decoration: none;
+  margin: 0 10px; /* Espacio entre los elementos */
+  transition: background-color 0.3s ease;
+}
+
+
