--- a/src/Components/Banner/Banner.css
+++ b/src/Components/Banner/Banner.css
@@ -1,21 +1,20 @@
-/* Banner.css */
 .banner-container {
-  position: relative; /* Asegura que los elementos hijos estén posicionados relativamente */
+  position: relative;
 }
 
 .overlay {
-  position: absolute; /* Posiciona el fondo negro sobre el video */
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Fondo negro semitransparente */
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .banner-video {
   width: 100%;
-  height: auto; /* Ajusta automáticamente la altura según el ancho del contenedor */
-  object-fit: cover; /* Para que el video se ajuste al contenedor */
+  height: auto;
+  object-fit: cover;
 }
 
 .banner-text {
@@ -24,9 +23,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-  font-size: 90px;
+  font-size: 10vw; /* Tamaño de fuente relativo al ancho de la pantalla */
   text-align: center;
-  z-index: 1; 
+  z-index: 1;
 }
-
-/* Agrega estilos específicos para el Navbar si es necesario */
