styles:new styles responsive

--- a/src/Components/AboutUs/AboutUs.css
+++ b/src/Components/AboutUs/AboutUs.css
@@ -38,6 +38,7 @@
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     text-align: center;
     margin-bottom: 20px; /* Espacio inferior */
+    margin-right: 15px;
 }
 
 .feature h3 {
